Botões Github e Linkein

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <header class="header-container">
             <div class="header">
                 <div class="checkbox-container">
-                    <div class="checkwrapper">
-                        <input type="checkbox" name="" id="toogle">
+                    <div class="check-wrapper">
+                        <input type="checkbox" id="toogle">
                         <label class="checkbox" for="toggle">
 
                             <div class="trace"></div>
@@ -23,7 +23,7 @@
 
                         </label>
                         <div class="menu"></div>
-                        <nav class="menu-items"></nav>
+                        <nav class="menu-items">
                             <ul>
                                 <li>
                                     <a href="#">Home</a>
@@ -35,6 +35,7 @@
                                     <a href="#">Projetos</a>
                                 </li>
                             </ul>
+                         </nav>
                     </div>
                 </div>
             </div>
@@ -42,8 +43,9 @@
             <h1>Gustavo Soriani</h1>
             <h2>Front-End Júnior</h2>
 
-            <div class="social_media"> 
-
+            <div class="social-media"> 
+                <a href="#">Linkedin</a>
+                <a href="#">Github</a>
             </div>
         </header>
 
