--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             <h2>Front-End Júnior</h2>
 
             <div class="social-media"> 
-                <a href="#">Linkedin</a>
-                <a href="#">Github</a>
+                <a href="https://www.linkedin.com/in/gustavo-soriani-b54bba125/">Linkedin</a>
+                <a href="https://github.com/GustavoSoriani">Github</a>
             </div>
         </header>
 
