--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="header">
                 <div class="checkbox-container">
                     <div class="check-wrapper">
-                        <input type="checkbox" id="toogle">
+                        <input type="checkbox" id="toggle">
                         <label class="checkbox" for="toggle">
 
                             <div class="trace"></div>
@@ -29,7 +29,7 @@
                                     <a href="#">Home</a>
                                 </li>
                                 <li>
-                                    <a href="#">Sobre</a>
+                                    <a href="#">Sobre Mim</a>
                                 </li>
                                 <li> 
                                     <a href="#">Projetos</a>
@@ -48,13 +48,46 @@
                 <a href="https://github.com/GustavoSoriani">Github</a>
             </div>
         </header>
-
         <main class="container">
-
+            <div class="card-container">
+                <div class="card">
+                    <div class="card-wrapper">
+                        <h2>Projeto 1</h2>
+                        <p>Conheça !</p>
+                    </div>
+                </div>
+                <div class="card-text">
+                    Lorem ipsum dolor sit amet adipiscing bibendum sem orci tempus aliquet gravida, orci amet iaculis aptent blandit quam accumsan donec in facilisis, cursus ante curabitur aliquet condimentum tincidunt facilisis non cubilia lorem et pretium aliquam phasellus ipsum
+                    metus quisque auctor. 
+                </div>
+            </div>
+            <div class="card-container">
+                <div class="card">
+                    <div class="card-wrapper">
+                        <h2>Projeto 2</h2>
+                        <p>Conheça !</p>
+                    </div>
+                </div>
+                <div class="card-text">
+                    Lorem ipsum dolor sit amet adipiscing bibendum sem orci tempus aliquet gravida, orci amet iaculis aptent blandit quam accumsan donec in facilisis, cursus ante curabitur aliquet condimentum tincidunt facilisis non cubilia lorem et pretium aliquam phasellus ipsum
+                    metus quisque auctor. 
+                </div>
+            </div>
+            <div class="card-container">
+                <div class="card">
+                    <div class="card-wrapper">
+                        <h2>Projeto 3</h2>
+                        <p>Conheça !</p>
+                    </div>
+                </div>
+                <div class="card-text">
+                    Lorem ipsum dolor sit amet adipiscing bibendum sem orci tempus aliquet gravida, orci amet iaculis aptent blandit quam accumsan donec in facilisis, cursus ante curabitur aliquet condimentum tincidunt facilisis non cubilia lorem et pretium aliquam phasellus ipsum
+                    metus quisque auctor. 
+                </div>
+            </div>    
         </main>
 
         <footer class="footer">
-
         </footer>
     </body>
 
