Animação finalizada - Projeto Finalizado !

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Uma página para me aprimorar !">
     <link rel="stylesheet" href="style.css">
     <title>Portfólio</title>
+
 </head>
 
     <body>
@@ -35,10 +36,10 @@
                                     <a href="#">Projetos</a>
                                 </li>
                             </ul>
-                         </nav>
-                    </div>
+                        </nav>
                 </div>
             </div>
+        </div>
 
             <h1>Gustavo Soriani</h1>
             <h2>Front-End Júnior</h2>
@@ -88,6 +89,7 @@
         </main>
 
         <footer class="footer">
+            Feito por Gustavo Soriani
         </footer>
     </body>
 
